--- a/basisu.vcxproj.filters
+++ b/basisu.vcxproj.filters
@@ -1,44 +1,68 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="basisu_resampler.cpp" />
-    <ClCompile Include="basisu_resample_filters.cpp" />
-    <ClCompile Include="basisu_basis_file.cpp" />
-    <ClCompile Include="basisu_comp.cpp" />
-    <ClCompile Include="basisu_enc.cpp" />
-    <ClCompile Include="basisu_etc.cpp" />
-    <ClCompile Include="basisu_backend.cpp" />
-    <ClCompile Include="basisu_frontend.cpp" />
-    <ClCompile Include="basisu_pvrtc1_4.cpp" />
-    <ClCompile Include="basisu_global_selector_palette_helpers.cpp" />
-    <ClCompile Include="basisu_gpu_texture.cpp" />
-    <ClCompile Include="lodepng.cpp" />
-    <ClCompile Include="basisu_tool.cpp" />
     <ClCompile Include="transcoder\basisu_transcoder.cpp">
       <Filter>transcoder</Filter>
     </ClCompile>
-    <ClCompile Include="basisu_ssim.cpp" />
-    <ClCompile Include="basisu_astc_decomp.cpp" />
-    <ClCompile Include="basisu_uastc_enc.cpp" />
-    <ClCompile Include="basisu_bc7enc.cpp" />
-    <ClCompile Include="apg_bmp.c" />
-    <ClCompile Include="jpgd.cpp" />
+    <ClCompile Include="3rdparty\apg\apg_bmp.c">
+      <Filter>3rdparty\apg</Filter>
+    </ClCompile>
+    <ClCompile Include="3rdparty\lodepng\lodepng.cpp">
+      <Filter>3rdparty\lodepng</Filter>
+    </ClCompile>
+    <ClCompile Include="3rdparty\jpeg-compressor\jpgd.cpp">
+      <Filter>3rdparty\jpeg-compressor</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_astc_decomp.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_backend.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_basis_file.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_bc7enc.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_comp.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_enc.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_etc.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_frontend.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_global_selector_palette_helpers.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_gpu_texture.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_pvrtc1_4.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_resample_filters.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_resampler.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_ssim.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="encoder\basisu_uastc_enc.cpp">
+      <Filter>encoder</Filter>
+    </ClCompile>
+    <ClCompile Include="tool/basisu_tool.cpp">
+      <Filter>tool</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="basisu_basis_file.h" />
-    <ClInclude Include="basisu_comp.h" />
-    <ClInclude Include="basisu_enc.h" />
-    <ClInclude Include="basisu_etc.h" />
-    <ClInclude Include="basisu_gpu_texture.h" />
-    <ClInclude Include="basisu_backend.h" />
-    <ClInclude Include="basisu_frontend.h" />
-    <ClInclude Include="basisu_pvrtc1_4.h" />
-    <ClInclude Include="basisu_global_selector_palette_helpers.h" />
-    <ClInclude Include="basisu_resampler.h" />
-    <ClInclude Include="basisu_resampler_filters.h" />
-    <ClInclude Include="lodepng.h" />
-    <ClInclude Include="transcoder\basisu_file_headers.h" />
-    <ClInclude Include="transcoder\basisu_global_selector_cb.h" />
     <ClInclude Include="transcoder\basisu_global_selector_palette.h">
       <Filter>transcoder</Filter>
     </ClInclude>
@@ -51,15 +75,69 @@
     <ClInclude Include="transcoder\basisu_transcoder.h">
       <Filter>transcoder</Filter>
     </ClInclude>
-    <ClInclude Include="basisu_ssim.h" />
-    <ClInclude Include="basisu_astc_decomp.h" />
-    <ClInclude Include="basisu_uastc_enc.h" />
-    <ClInclude Include="basisu_bc7enc.h" />
     <ClInclude Include="transcoder\basisu_transcoder_uastc.h">
       <Filter>transcoder</Filter>
     </ClInclude>
-    <ClInclude Include="apg_bmp.h" />
-    <ClInclude Include="jpgd.h" />
+    <ClInclude Include="3rdparty\apg\apg_bmp.h">
+      <Filter>3rdparty\apg</Filter>
+    </ClInclude>
+    <ClInclude Include="3rdparty\lodepng\lodepng.h">
+      <Filter>3rdparty\lodepng</Filter>
+    </ClInclude>
+    <ClInclude Include="3rdparty\jpeg-compressor\jpgd.h">
+      <Filter>3rdparty\jpeg-compressor</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_astc_decomp.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_backend.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_basis_file.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_bc7enc.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_comp.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_enc.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_etc.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="transcoder\basisu_file_headers.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_frontend.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="transcoder\basisu_global_selector_cb.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_global_selector_palette_helpers.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_gpu_texture.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_pvrtc1_4.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_resampler.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_resampler_filters.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_uastc_enc.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
+    <ClInclude Include="encoder\basisu_ssim.h">
+      <Filter>encoder</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="transcoder\basisu_transcoder_tables_dxt1_6.inc">
@@ -90,6 +168,24 @@
   <ItemGroup>
     <Filter Include="transcoder">
       <UniqueIdentifier>{7a54aaad-1d10-4bdf-b8e9-c14ed2263ed8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="3rdparty">
+      <UniqueIdentifier>{7091e180-f547-452f-b1fc-2fead0439177}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="3rdparty\lodepng">
+      <UniqueIdentifier>{22a84737-d169-48a5-905d-d4666b09b9f8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="3rdparty\apg">
+      <UniqueIdentifier>{87c2ec11-f9ed-434b-98dc-c87462bc5ae5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="3rdparty\jpeg-compressor">
+      <UniqueIdentifier>{0f76936e-88b8-4fd1-90df-fa0f4333afcf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="encoder">
+      <UniqueIdentifier>{a4d26599-9356-4d06-9543-8fb5fc69188c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="tool">
+      <UniqueIdentifier>{55a9b4c5-f0ac-4d11-85d1-34b67df027ff}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
